--- a/config/samples/terraform-aws.yaml
+++ b/config/samples/terraform-aws.yaml
@@ -29,8 +29,10 @@ spec:
           key: AWS_SECRET_ACCESS_KEY
 
   backend: |
-    backend "local" {
-      path = "/tmp/tfmodule/mytfstate.tfstate"
+    backend "s3" {
+      bucket = "mybucket"
+      key    = "path/to/my/key"
+      region = "eu-west-1"
     }
   
   providersConfig: |
