--- a/config/samples/terraform-azure.yaml
+++ b/config/samples/terraform-azure.yaml
@@ -38,8 +38,11 @@ spec:
           key: ARM_TENANT_ID
 
   backend: |
-    backend "local" {
-      path = "/tmp/tfmodule/mytfstate.tfstate"
+    backend "azurerm" {
+      resource_group_name  = "StorageAccount-ResourceGroup"
+      storage_account_name = "abcd1234"
+      container_name       = "tfstate"
+      key                  = "prod.terraform.tfstate"
     }
   
   providersConfig: |
