--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,12 @@
 name: build
 
-on: ["push", "pull_request"]
+on:
+  push:
+    branches:
+      - master
+      - main
+    tags-ignore:
+      - '*.*.*'
 
 jobs:
   build:
@@ -13,8 +19,21 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
+
     - name: Build
       run: make build
 
     - name: Test
-      run: make docker-build
+      run: make test-cov
+    
+    - name: Exclude Generated
+      run: |
+        cat coverage.tmp.txt | grep -v "_generated.deepcopy.go" > coverage.txt
+        go tool cover -func coverage.txt
+        rm coverage.tmp.txt
+
+    - name: Docker Build
+      run: docker build -t controller:latest .
+
+    - name: Codecov Push
+      run: bash <(curl -s https://codecov.io/bash)
