Feature/depends on (#8)
* depends on initial run

* dependencies unit testing

* tests for terraform client

* remove initialize run log before calling create

* add depends on on readme and sample

--- a/config/crd/bases/run.terraform-operator.io_terraforms.yaml
+++ b/config/crd/bases/run.terraform-operator.io_terraforms.yaml
@@ -16,7 +16,14 @@ spec:
     singular: terraform
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.runStatus
+      name: State
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Terraform is the Schema for the terraforms API
@@ -46,7 +53,17 @@ spec:
               dependsOn:
                 description: dependencies on other modules
                 items:
-                  type: string
+                  description: DependsOnSpec specifies the dependency on other runs
+                  properties:
+                    name:
+                      description: The terraform metadata.name
+                      type: string
+                    namespace:
+                      description: Namespace where the Terraform run exist
+                      type: string
+                  required:
+                  - name
+                  type: object
                 type: array
               destroy:
                 description: Indicates whether a destroy job should run
