add input variable from an output of a dependency (#11)
* add variable as an output from another workflow

* add output secret name to terraform print column

Co-authored-by: ibraheem Al Saady <ibraheemalsaady@ibraheems-MacBook-Pro-2.local>

--- a/config/crd/bases/run.terraform-operator.io_terraforms.yaml
+++ b/config/crd/bases/run.terraform-operator.io_terraforms.yaml
@@ -18,7 +18,10 @@ spec:
   versions:
   - additionalPrinterColumns:
     - jsonPath: .status.runStatus
-      name: State
+      name: Status
+      type: string
+    - jsonPath: .status.outputSecretName
+      name: Secret
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Age
@@ -3188,6 +3191,18 @@ spec:
                 description: Variables as inputs to the Terraform module
                 items:
                   properties:
+                    dependencyRef:
+                      description: DependencyRef denotes if this variable should be
+                        fetched from the output of a dependency
+                      properties:
+                        key:
+                          type: string
+                        name:
+                          type: string
+                      required:
+                      - key
+                      - name
+                      type: object
                     environmentVariable:
                       description: EnvironmentVariable denotes if this variable should
                         be created as environment variable
@@ -3196,7 +3211,7 @@ spec:
                       description: Terraform module variable name
                       type: string
                     value:
-                      description: Variable value
+                      description: The value of the variable
                       type: string
                     valueFrom:
                       description: The variable value from a key source (secret or
@@ -3300,6 +3315,8 @@ spec:
               observedGeneration:
                 format: int64
                 type: integer
+              outputSecretName:
+                type: string
               previousRuns:
                 items:
                   description: PreviousRuns stores the previous run information in
