refactor code for Go lint & enhance docs (#12)
* refactor code with the introduction of go linting

* lint step in PR workflow

* docs update

Co-authored-by: ibraheem Al Saady <ibraheemalsaady@ibraheems-MacBook-Pro-2.local>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,7 +32,7 @@ jobs:
         go tool cover -func coverage.txt
         rm coverage.tmp.txt
 
-    - name: Docker Build
+    - name: Docker Build Test
       run: docker build -t controller:latest .
 
     - name: Codecov Push
