--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
       - master
-      - 'releases/**'
-      - 'feature/**'
-      - 'fix/**'
 
 jobs:
   build:
@@ -24,5 +21,12 @@ jobs:
     - name: Build
       run: make build
 
+    ## Ref: https://github.com/golangci/golangci-lint-action
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+
     - name: Test
       run: make docker-build
+
+    - name: Docker Build Test
+      run: docker build -t controller:latest .
