--- a/config/samples/role-terraform-runner.yaml
+++ b/config/samples/role-terraform-runner.yaml
@@ -12,7 +12,10 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get", "update"]
+  verbs: ["create", "get", "update", "list"]
+- apiGroups: ["coordination.k8s.io"]
+  resources: ["leases"]
+  verbs: ["create", "update", "watch", "get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
