docs: seo using jekyll-seo-tag in just-the-docs theme

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -60,6 +60,9 @@ kramdown:
     block:
       line_numbers: false
 
+plugins:
+  - jekyll-seo-tag
+
 compress_html:
   clippings: all
   comments: all
