--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ testbin/*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-*.html
+cover.html
 coverage.txt
 
 # Kubernetes Generated files - skip generated files, except for vendored files
