--- a/config/manifest/terraform-operator.yaml
+++ b/config/manifest/terraform-operator.yaml
@@ -18,8 +18,6 @@ metadata:
   name: terraform-operator
   labels:
     app: terraform-operator
-    version: "0.0.2"
-    app.kubernetes.io/version: "0.0.2"
     app.kubernetes.io/part-of: "terraform-operator"
 rules:
 - apiGroups: [""]
@@ -110,13 +108,14 @@ metadata:
   name: terraform-runner
   labels:
     app: terraform-operator
-    version: "0.0.2"
-    app.kubernetes.io/version: "0.0.2"
     app.kubernetes.io/part-of: "terraform-operator"
 rules:
 - apiGroups: [""]
   resources: ["secrets"]
-  verbs: ["get", "update"]
+  verbs: ["create", "get", "update", "list"]
+- apiGroups: ["coordination.k8s.io"]
+  resources: ["leases"]
+  verbs: ["create", "update", "watch", "get"]
 ---
 # Source: terraform-operator/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
@@ -125,8 +124,6 @@ metadata:
   name: terraform-operator
   labels:
     app: terraform-operator
-    version: "0.0.2"
-    app.kubernetes.io/version: "0.0.2"
     app.kubernetes.io/part-of: "terraform-operator"
 subjects:
 - kind: ServiceAccount
@@ -162,7 +159,6 @@ metadata:
   labels:
     app: terraform-operator
   annotations:
-    null
 spec:
   replicas: 1
   selector:
@@ -172,18 +168,15 @@ spec:
     metadata:
       labels:
         app: terraform-operator
-        version: "0.0.2"
-        app.kubernetes.io/version: "0.0.2"
         app.kubernetes.io/part-of: "terraform-operator"
     spec:
       serviceAccountName: terraform-operator
 
       imagePullSecrets:
 
-
       containers:
         - name: terraform-operator
-          image: docker.io/kubechamp/terraform-operator:0.0.2
+          image: docker.io/kubechamp/terraform-operator:0.1.1
           imagePullPolicy: IfNotPresent
 
           securityContext:
@@ -200,6 +193,6 @@ spec:
             - name: TERRAFORM_RUNNER_IMAGE
               value: kubechamp/terraform-runner
             - name: TERRAFORM_RUNNER_IMAGE_TAG
-              value: 0.0.2
+              value: 0.0.4
             - name: KNOWN_HOSTS_CONFIGMAP_NAME
               value: terraform-operator-known-hosts
