fix: kubernetes resources cleanup (#19)
* fix: kubernetes resources cleanup

* secret name without run id and added tests

* fix lint

* omit empty for previousRunID status field

Co-authored-by: ibraheem Al Saady <ibraheemalsaady@ibraheems-MacBook-Pro-2.local>

--- a/config/crd/bases/run.terraform-operator.io_terraforms.yaml
+++ b/config/crd/bases/run.terraform-operator.io_terraforms.yaml
@@ -3323,6 +3323,8 @@ spec:
                 type: integer
               outputSecretName:
                 type: string
+              previousRunId:
+                type: string
               runStatus:
                 description: TerraformRunStatus is the status of the workflow/run
                 type: string
