--- a/config/crd/bases/run.terraform-operator.io_terraforms.yaml
+++ b/config/crd/bases/run.terraform-operator.io_terraforms.yaml
@@ -13,6 +13,8 @@ spec:
     kind: Terraform
     listKind: TerraformList
     plural: terraforms
+    shortNames:
+    - tf
     singular: terraform
   scope: Namespaced
   versions:
