--- a/config/crd/bases/run.terraform-operator.io_terraforms.yaml
+++ b/config/crd/bases/run.terraform-operator.io_terraforms.yaml
@@ -1,10 +1,9 @@
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.7.0
+    controller-gen.kubebuilder.io/version: v0.9.0
   creationTimestamp: null
   name: terraforms.run.terraform-operator.io
 spec:
@@ -475,19 +474,18 @@ spec:
                           pod starts, and deleted when the pod is removed. \n Use
                           this if: a) the volume is only needed while the pod runs,
                           b) features of normal volumes like restoring from snapshot
-                          or capacity    tracking are needed, c) the storage driver
-                          is specified through a storage class, and d) the storage
-                          driver supports dynamic volume provisioning through    a
-                          PersistentVolumeClaim (see EphemeralVolumeSource for more
-                          \   information on the connection between this volume type
-                          \   and PersistentVolumeClaim). \n Use PersistentVolumeClaim
-                          or one of the vendor-specific APIs for volumes that persist
-                          for longer than the lifecycle of an individual pod. \n Use
-                          CSI for light-weight local ephemeral volumes if the CSI
-                          driver is meant to be used that way - see the documentation
-                          of the driver for more information. \n A pod can use both
-                          types of ephemeral volumes and persistent volumes at the
-                          same time."
+                          or capacity tracking are needed, c) the storage driver is
+                          specified through a storage class, and d) the storage driver
+                          supports dynamic volume provisioning through a PersistentVolumeClaim
+                          (see EphemeralVolumeSource for more information on the connection
+                          between this volume type and PersistentVolumeClaim). \n
+                          Use PersistentVolumeClaim or one of the vendor-specific
+                          APIs for volumes that persist for longer than the lifecycle
+                          of an individual pod. \n Use CSI for light-weight local
+                          ephemeral volumes if the CSI driver is meant to be used
+                          that way - see the documentation of the driver for more
+                          information. \n A pod can use both types of ephemeral volumes
+                          and persistent volumes at the same time."
                         properties:
                           volumeClaimTemplate:
                             description: "Will be used to create a stand-alone PVC
@@ -579,12 +577,12 @@ spec:
                                       if one of them is empty and the other is non-empty.
                                       There are two important differences between
                                       DataSource and DataSourceRef: * While DataSource
-                                      only allows two specific types of objects, DataSourceRef   allows
-                                      any non-core object, as well as PersistentVolumeClaim
+                                      only allows two specific types of objects, DataSourceRef
+                                      allows any non-core object, as well as PersistentVolumeClaim
                                       objects. * While DataSource ignores disallowed
-                                      values (dropping them), DataSourceRef   preserves
+                                      values (dropping them), DataSourceRef preserves
                                       all values, and generates an error if a disallowed
-                                      value is   specified. (Beta) Using this field
+                                      value is specified. (Beta) Using this field
                                       requires the AnyVolumeDataSource feature gate
                                       to be enabled.'
                                     properties:
@@ -2046,12 +2044,12 @@ spec:
                             the pod starts, and deleted when the pod is removed. \n
                             Use this if: a) the volume is only needed while the pod
                             runs, b) features of normal volumes like restoring from
-                            snapshot or capacity    tracking are needed, c) the storage
+                            snapshot or capacity tracking are needed, c) the storage
                             driver is specified through a storage class, and d) the
                             storage driver supports dynamic volume provisioning through
-                            \   a PersistentVolumeClaim (see EphemeralVolumeSource
-                            for more    information on the connection between this
-                            volume type    and PersistentVolumeClaim). \n Use PersistentVolumeClaim
+                            a PersistentVolumeClaim (see EphemeralVolumeSource for
+                            more information on the connection between this volume
+                            type and PersistentVolumeClaim). \n Use PersistentVolumeClaim
                             or one of the vendor-specific APIs for volumes that persist
                             for longer than the lifecycle of an individual pod. \n
                             Use CSI for light-weight local ephemeral volumes if the
@@ -2153,12 +2151,12 @@ spec:
                                         the other is non-empty. There are two important
                                         differences between DataSource and DataSourceRef:
                                         * While DataSource only allows two specific
-                                        types of objects, DataSourceRef   allows any
+                                        types of objects, DataSourceRef allows any
                                         non-core object, as well as PersistentVolumeClaim
                                         objects. * While DataSource ignores disallowed
-                                        values (dropping them), DataSourceRef   preserves
+                                        values (dropping them), DataSourceRef preserves
                                         all values, and generates an error if a disallowed
-                                        value is   specified. (Beta) Using this field
+                                        value is specified. (Beta) Using this field
                                         requires the AnyVolumeDataSource feature gate
                                         to be enabled.'
                                       properties:
@@ -3342,9 +3340,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
